Improved layout, fixed layout bugs, changed Bio, added open-source

--- a/css/green-bootstrap.css
+++ b/css/green-bootstrap.css
@@ -31,10 +31,12 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
-  padding-top: 70px;
+  padding-top: 60px;
+  padding-bottom: 20px;
 }
 a:focus {
   outline: thin dotted;
@@ -331,6 +333,9 @@ hr {
 p {
   margin: 0 0 10px;
 }
+.break-word {
+    word-wrap: break-word;
+}
 .lead {
   margin-bottom: 20px;
   font-size: 16.099999999999998px;
@@ -374,6 +379,12 @@ cite {
 }
 .text-center {
   text-align: center;
+}
+lighter {
+  color: #26ada1;
+}
+darker {
+  color: #186e67;
 }
 h1,
 h2,
@@ -605,6 +616,7 @@ code {
   color: #4f482e;
   background-color: #d7f2d3;
   border-radius: 4px;
+  word-wrap: break-word;
 }
 kbd {
   padding: 2px 4px;
@@ -653,6 +665,8 @@ pre code {
   white-space: pre;  
 }
 .container {
+  padding-left: 15px;
+  padding-right: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -3550,8 +3564,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-collapse {
   max-height: 340px;
   overflow-x: visible;
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 15px;
+  padding-left: 15px;
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
   -webkit-overflow-scrolling: touch;
@@ -4005,7 +4019,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-color: #283c2e;
 }
 .navbar-inverse .navbar-brand {
-  color: #95a65b;
+  font-weight: bold;
+  color: #ffffff;
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
